feat: let use multiple docker scopes in one repo
BREAKING CHANGE: folder structure is changed

--- a/postgres-pgvector/Dockerfile.postgresql
+++ b/postgres-pgvector/Dockerfile.postgresql
@@ -11,13 +11,12 @@ FROM postgres:15-alpine AS pg-ext-builder
 ARG PGVECTOR_OPTFLAGS
 # Install necessary packages and pgvector extension
 RUN set -eux; \
-    apk add --no-cache \
-
-    build-base \
-    clang19 \
-    llvm19-dev \ 
-    llvm19 \
-    git ;
+  apk add --no-cache \
+  build-base \
+  clang19 \
+  llvm19-dev \ 
+  llvm19 \
+  git ;
 
 WORKDIR /home
 RUN git clone --branch v0.8.0 --depth 1 https://github.com/pgvector/pgvector.git 
@@ -31,11 +30,11 @@ EOT
 
 # Set default PostgreSQL configuration (optional)
 ENV POSTGRES_DB=test
-ENV POSTGRES_USER=test
-ENV POSTGRES_PASSWORD=!ChangeMe!
+ENV POSTGRES_USER=myuser
+ENV POSTGRES_PASSWORD='!ChangeMe!'
 
 # PostgreSQL port exposed in the base image already
-# EXPOSE 5432
+EXPOSE 5432
 
 FROM postgres:15-alpine
 COPY --from=pg-ext-builder /usr/local/lib/postgresql/bitcode/vector.index.bc /usr/local/lib/postgresql/bitcode/vector.index.bc
@@ -45,5 +44,5 @@ COPY --from=pg-ext-builder /usr/local/share/postgresql/extension /usr/local/shar
 # Copy custom scripts or configuration files from your host to the container
 COPY ./scripts/ /docker-entrypoint-initdb.d/
 
-# Introduced in the base image
-# CMD ["postgres"]
+# Set the default command to run PostgreSQL
+CMD ["postgres"]
